[tool.poetry]
name = "nano-services"
version = "0.1.0"
description = ""
authors = ["Mauricio Benjamin <mauriciobenjamin700@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
fastapi = "^0.112.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
