[project]
name = "nano-services"
version = "0.1.0"
description = "A project with generic nano services in python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
    "matplotlib>=3.10.1",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
